--- a/src/app/products/all-products/all-products.component.html
+++ b/src/app/products/all-products/all-products.component.html
@@ -4,6 +4,7 @@
             <button type="button" class="btn btn-info btn-lg" style="margin: 15px; float: right;" (click)="logout()">Logout</button>
         </div>
     </div>
+    <h1 style="text-align: center; color:indianred; margin: 25 px;">All Products</h1>
     <div class="row">
         <div class="col-sm-12">
             <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#add-product" style="margin-bottom: 15px;">+Add Product</button>
